# share_quant

./: .gitattributes  .gitignore  AGENTS.md  README.md
database/: AGENTS.md  README.md  pyproject.toml
database/configs/: default.yaml
database/src/share_quant/: cli.py  config.py  datasets.py  errors.py  phased_sync.py  security_codes.py  storage.py  sync.py
database/tests/: test_cli.py  test_phased_sync.py  test_storage.py  test_sync.py
factor_research/: .gitignore  AGENTS.md  README.md  factor_pool_experiment_summary.md  pyproject.toml
factor_research/configs/: default.yaml  factor_marginal_analysis.yaml  walk_forward_champion.yaml
factor_research/factor_combo/: build_docx_research_report.py  check_docx_report.py  factor_backtest.py  run_factor_backtest.py  run_factor_diagnostics.py
factor_research/outputs/diagnostics/: decile_returns.csv  decile_summary.csv  diagnostics_report.md  ic_by_period.csv  ic_summary.csv  industry_exposure.csv  long_short_metrics.csv  long_short_returns.csv  neutralized_ic_by_period.csv  neutralized_ic_summary.csv  size_exposure.csv  yearly_factor_returns.csv  (+1 more)
factor_research/scripts/: build_docx_research_report.py  build_docx_research_report_v2.py  check_docx_report.py  generate_factor_marginal_report.py  run_factor_backtest.py  run_factor_diagnostics.py  run_factor_marginal_analysis.py  run_group_balanced11_extended_validation.py  run_multifactor_layered_backtest.py  run_walk_forward_champion.py
factor_research/tests/: test_factor_combo_research.py  test_factor_marginal_analysis.py  test_walk_forward_champion.py
(+137 files in other folders)
